--- a/pom.xml
+++ b/pom.xml
@@ -65,7 +65,7 @@
                         <!-- Default configuration for running with: mvn clean javafx:run -->
                         <id>default-cli</id>
                         <configuration>
-                            <mainClass>szoftverleltar.szoftverleltar/.szoftverleltar.HelloApplication
+                            <mainClass>szoftverleltar.szoftverleltar/szoftverleltar.szoftverleltar.HelloApplication
                             </mainClass>
                             <launcher>app</launcher>
                             <jlinkZipName>app</jlinkZipName>
